//////////////////////////////////////////////////////////////
// 🛍️ E-commerce Database Schema with Discounts
//////////////////////////////////////////////////////////////

// Users (profiles only, no password)
Table users {
  id uuid [pk]
  email varchar [unique, not null]
  name varchar
  avatar_url text
  created_at timestamp
}

// Categories
Table categories {
  id uuid [pk, default: `uuid_generate_v4()`]
  name text [not null, unique]
  slug text [not null, unique]
}

// Products
Table products {
  id uuid [pk, default: `uuid_generate_v4()`]
  title varchar [not null]
  description text
  category_id uuid [ref: > categories.id]
  created_at timestamp
}

// Product Variants
Table product_variants {
  id uuid [pk, default: `uuid_generate_v4()`]
  product_id uuid [ref: > products.id]
  name varchar
  sku varchar [unique]
  current_price decimal(10,2)
  old_price decimal(10,2)
  stock int
  created_at timestamp
  updated_at timestamp
}

// Product Images
Table product_images {
  id uuid [pk, default: `uuid_generate_v4()`]
  variant_id uuid [ref: > product_variants.id]
  url text
  alt text
  position int
}

// Attributes (standardized for categories)
Table attributes {
  id uuid [pk, default: `uuid_generate_v4()`]
  name text [not null, unique]
  slug text [not null, unique]
  category_id uuid [ref: > categories.id]
}

// Attribute Values
Table attribute_values {
  id uuid [pk, default: `uuid_generate_v4()`]
  attribute_id uuid [ref: > attributes.id]
  value text [not null]
}

// Linking Product Variants and Attribute Values
Table product_variant_attributes {
  variant_id uuid [ref: > product_variants.id]
  attribute_value_id uuid [ref: > attribute_values.id]
  primary key (variant_id, attribute_value_id)
}

// Wishlists
Table wishlists {
  id uuid [pk, default: `uuid_generate_v4()`]
  user_id uuid [ref: > users.id]
  created_at timestamp
}

// Wishlist Items
Table wishlist_items {
  id uuid [pk, default: `uuid_generate_v4()`]
  wishlist_id uuid [ref: > wishlists.id]
  variant_id uuid [ref: > product_variants.id]
}

// Carts
Table carts {
  id uuid [pk, default: `uuid_generate_v4()`]
  user_id uuid [ref: > users.id, null]
  session_id varchar [unique, null]
  created_at timestamp
  updated_at timestamp
}

// Cart Items
Table cart_items {
  id uuid [pk, default: `uuid_generate_v4()`]
  cart_id uuid [ref: > carts.id]
  variant_id uuid [ref: > product_variants.id]
  quantity int
}

// Orders
Table orders {
  id uuid [pk, default: `uuid_generate_v4()`]
  user_id uuid [ref: > users.id, null]
  session_id varchar [null]
  email varchar [not null]
  phone varchar
  name varchar
  address text
  total decimal(10,2)
  status varchar [default: 'pending']
  discount_id uuid [ref: > discounts.id, null]  // applied discount
  created_at timestamp
}

// Order Items
Table order_items {
  id uuid [pk, default: `uuid_generate_v4()`]
  order_id uuid [ref: > orders.id]
  variant_id uuid [ref: > product_variants.id]
  quantity int
  price decimal(10,2)
}

// Payments (Stripe)
Table payments {
  id uuid [pk, default: `uuid_generate_v4()`]
  order_id uuid [ref: > orders.id, not null]
  user_id uuid [ref: > users.id, null]
  session_id varchar [null]
  stripe_payment_intent_id text [unique, not null]
  amount numeric [not null]
  currency text [default: 'usd']
  status text [default: 'pending'] // pending, succeeded, failed
  created_at timestamptz [default: `now()`]
}

// Reviews (only for verified buyers)
Table reviews {
  id uuid [pk, default: `uuid_generate_v4()`]
  user_id uuid [ref: > users.id, not null]
  product_id uuid [ref: > products.id, not null]
  rating int [not null, note: '1–5']
  comment text
  approved boolean [default: false] // moderation
  created_at timestamptz [default: `now()`]
}

// Discounts
Table discounts {
  id uuid [pk, default: `uuid_generate_v4()`]
  code varchar [unique]
  description text
  discount_type text // 'percent' | 'fixed'
  value numeric
  active boolean [default: true]
  starts_at timestamptz
  ends_at timestamptz
}

// Optional: linking discounts to specific products
Table discount_products {
  discount_id uuid [ref: > discounts.id]
  product_id uuid [ref: > products.id]
  primary key (discount_id, product_id)
}

//////////////////////////////////////////////////////////////
// Relationships
//////////////////////////////////////////////////////////////

Ref: products.category_id > categories.id
Ref: product_variants.product_id > products.id
Ref: product_images.variant_id > product_variants.id
Ref: product_variant_attributes.variant_id > product_variants.id
Ref: product_variant_attributes.attribute_value_id > attribute_values.id
Ref: attribute_values.attribute_id > attributes.id
Ref: wishlist_items.wishlist_id > wishlists.id
Ref: wishlist_items.variant_id > product_variants.id
Ref: carts.user_id > users.id
Ref: cart_items.cart_id > carts.id
Ref: cart_items.variant_id > product_variants.id
Ref: orders.user_id > users.id
Ref: orders.discount_id > discounts.id
Ref: order_items.order_id > orders.id
Ref: order_items.variant_id > product_variants.id
Ref: payments.order_id > orders.id
Ref: payments.user_id > users.id
Ref: reviews.user_id > users.id
Ref: reviews.product_id > products.id
Ref: discount_products.discount_id > discounts.id
Ref: discount_products.product_id > products.id
